--- a/styles.css
+++ b/styles.css
@@ -981,11 +981,6 @@
 .article-details {
   flex: 1;
 }
-/* Bouton menu ☰ */
-.menu-toggle {
-  color: ;           /* noir */
-  font-weight: bold;     /* gras */
-  font-size: 18px;
-  cursor: pointer;
-  text-align: center;
+.hidden {
+  display: none;
 }
